# whatsapp_bot

./: .gitignore  .railwayignore  firebase_credentials.json  pubspec.yaml  pyproject.toml  railway.toml  requirements.txt
.dart_tool/: package_config.json  package_config_subset
.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  DIPS-shm  DIPS-wal  Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data  passkey_enclave_state
.dart_tool/chrome-device/Default/Extension Rules/: LOG
.dart_tool/chrome-device/Default/Extension Scripts/: LOG
.dart_tool/chrome-device/Default/Extension State/: LOG  LOG.old
.dart_tool/chrome-device/Default/Session Storage/: LOG  LOG.old
.dart_tool/chrome-device/Default/Sessions/: Session_13383905588157047  Session_13383905734291309  Session_13383983171814094  Session_13384511507606838  Session_13384511722432592  Tabs_13383905671338384  Tabs_13383905734865914  Tabs_13383983172479102
.dart_tool/extension_discovery/: vs_code.json
automate_media/: README.md  __init__.py  add_test_partner.py  bot_test.py  main.py  run.py
automate_media/models/: chatmodels.py  lead.py  partner.py  products.py
automate_media/routes/: chat.py  chatroutes.py  health.py  leads.py  partners.py  whatsapp.py
automate_media/services/: agent.py  chatservice.py  firestore_service.py  productservice.py
html/: chat_widget.html
test/: widget_test.dart
web/: index.html  manifest.json
(+20 files in other folders)
